--- a/css/custom.css
+++ b/css/custom.css
@@ -2,10 +2,18 @@
   margin: 0;
   padding: 0;
 }
+hr {
+  : 20px;
+  padding-top: 20px
+}
+
 body {
   font-family: YuGothic, "游ゴシック", "メイリオ", Meiryo, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", sans-serif;
   background-color: #ddd;
   font-size: 14px;
+}
+footer{
+  text-align: center
 }
 nav {
   background-color: #2f4f4f;
@@ -25,39 +33,8 @@ nav ul li a:hover {
 }
 
 /*
-nav ul li a.selected {
-  color: #000;
-}
-  border: 5px solid #fff;
-  border-radius: 100%;
-  height: 140px;/* トリミングしたい枠の高さ 
-    -webkit-transform: translate(-50%,-50%);
-  -ms-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
-  
-
-  img.img-trim{
-  position: relative;
-  overflow: hidden;
-　top: 50%;
-  left: 50%;
-  width: 100%;
-  height: auto;
-
-}  
-
-
-#logo img {
-  padding-top: 140px;
-  padding-left: 30px;
-  padding-bottom: 80px;
-  max-width: auto;
-  height: 220px;
-  transform: rotate(90deg);
-}
 
 */
-
 
 nav ul li a {
   color: #c0c0c0;
@@ -70,5 +47,4 @@ nav ul li a {
   border-radius: 15%;
   width: 100px;
   height: 120px;
-  transform: rotate(90deg);
 }
